- Liquids will now consider the player to be inside them (and affect their physics) if the player hurtbox collide with them rather than the whole player hitbox
- Improved performances of the auto-save feature triggering on room transition in campaign using a Merge Chapter Controller whith its mode set to Rooms
- Fixed a bug saving the current Light Mode instead of the Respawn light mode when returning to the title screen in The Secret of Celeste Mountain

Version 1.0.65 :
- Fixed a bug preventing the player seeker sequence to complete correctly in vanilla 5A
- Fixed a crash happening after watching Credits in The Secret of Celeste Mountain before starting the game at least once

Version 1.0.64 :
- Added "Force Inactive Flag" attribute to Drone Gates and Flag Dash Switches
- Added "Cell Offset X" and "Cell Offset Y" attributes to Cell Locks
- Added "Varia Prevent Dying", "Group", "Can Drown", "Air Timer", "Inside Transparency" and "Appear Flags" attributes to Liquids
- Added "Animation Speed", Particles Color", "Light Color", "Wiggle", "Loop Sound", "Loop Burst", "Static Time", "Poem", "Poem Name", "Poem Color", "Poem Particles Color", "Poem Sprite", "Poem Sprite Animation Speed" and "Poem Sprite Animation Pause" attributes to Custom Collectable
- Added "Hide On World Map" attribute to In-game Map Hint Controllers
- Added "Force Slide" attribute to Slopes
- Moved the "Show Hints" and "Progress Display" options from the bottom of the In-Game map screen to a new menu accessible with a single button while the In-Game map is open
- Added a Marker feature to the In-game map, allowing players to place markers on the map, at the location of their choice
- The progress display setting of the In-Game map is now shared between the area map and the world map, instead of having differents display settings for each one